syntax = "proto3";

package user;

option go_package = "github.com/fangcun-mount/qs-server/internal/apiserver/interface/grpc/proto/user";

import "google/protobuf/timestamp.proto";

// UserService 用户模块服务 - 统一的用户体系服务
service UserService {
  // ========== 基础用户服务 ==========
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  // 更新用户基本信息
  rpc UpdateUserBasicInfo(UpdateUserBasicInfoRequest) returns (UpdateUserBasicInfoResponse);
  // 获取用户信息
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // ========== 微信账号服务 ==========
  // 创建或更新小程序账号
  rpc CreateOrUpdateMiniProgramAccount(CreateOrUpdateMiniProgramAccountRequest) returns (WechatAccountResponse);
  // 创建或更新公众号账号
  rpc CreateOrUpdateOfficialAccount(CreateOrUpdateOfficialAccountRequest) returns (WechatAccountResponse);
  // 获取微信账号
  rpc GetWechatAccountByOpenID(GetWechatAccountByOpenIDRequest) returns (WechatAccountResponse);
  
  // ========== 受试者服务 ==========
  // 创建受试者
  rpc CreateTestee(CreateTesteeRequest) returns (TesteeResponse);
  // 更新受试者
  rpc UpdateTestee(UpdateTesteeRequest) returns (TesteeResponse);
  // 获取受试者
  rpc GetTestee(GetTesteeRequest) returns (TesteeResponse);
  // 检查受试者是否存在
  rpc TesteeExists(TesteeExistsRequest) returns (TesteeExistsResponse);
  
  // ========== 填写人服务 ==========
  // 创建填写人
  rpc CreateWriter(CreateWriterRequest) returns (WriterResponse);
  // 更新填写人
  rpc UpdateWriter(UpdateWriterRequest) returns (WriterResponse);
  // 获取填写人
  rpc GetWriter(GetWriterRequest) returns (WriterResponse);
}

// ============== 基础用户 Messages ==============

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string nickname = 3;
  string email = 4;
  string phone = 5;
  string introduction = 6;
}

message CreateUserResponse {
  uint64 user_id = 1;
  string username = 2;
  string nickname = 3;
  string email = 4;
  string phone = 5;
}

message UpdateUserBasicInfoRequest {
  uint64 user_id = 1;
  string username = 2;
  string nickname = 3;
  string email = 4;
  string phone = 5;
  string avatar = 6;
  string introduction = 7;
}

message UpdateUserBasicInfoResponse {
  uint64 user_id = 1;
  string username = 2;
  string nickname = 3;
  string avatar = 4;
}

message GetUserRequest {
  uint64 user_id = 1;
}

message GetUserResponse {
  uint64 user_id = 1;
  string username = 2;
  string nickname = 3;
  string email = 4;
  string phone = 5;
  string avatar = 6;
  string introduction = 7;
  uint32 status = 8;
}

// ============== 微信账号 Messages ==============

message CreateOrUpdateMiniProgramAccountRequest {
  string app_id = 1;         // 微信 AppID
  string open_id = 2;        // OpenID
  string union_id = 3;       // UnionID (可选)
  string nickname = 4;       // 昵称
  string avatar = 5;         // 头像
  string session_key = 6;    // SessionKey
}

message CreateOrUpdateOfficialAccountRequest {
  string app_id = 1;         // 微信 AppID
  string open_id = 2;        // OpenID
  string union_id = 3;       // UnionID (可选)
  string nickname = 4;       // 昵称
  string avatar = 5;         // 头像
}

message GetWechatAccountByOpenIDRequest {
  string app_id = 1;         // 微信 AppID
  string platform = 2;       // 平台: mini/oa
  string open_id = 3;        // OpenID
}

message WechatAccountResponse {
  uint64 account_id = 1;     // 账号ID
  uint64 user_id = 2;        // 关联的用户ID
  string app_id = 3;         // 微信 AppID
  string platform = 4;       // 平台
  string open_id = 5;        // OpenID
  string union_id = 6;       // UnionID
  string nickname = 7;       // 昵称
  string avatar = 8;         // 头像
  bool is_new_account = 9;   // 是否新账号
}

// ============== 受试者 Messages ==============

message CreateTesteeRequest {
  uint64 user_id = 1;
  string name = 2;
  uint32 sex = 3;                              // 0-未知, 1-男, 2-女
  google.protobuf.Timestamp birthday = 4;      // 生日
}

message UpdateTesteeRequest {
  uint64 user_id = 1;
  string name = 2;
  uint32 sex = 3;
  google.protobuf.Timestamp birthday = 4;
}

message GetTesteeRequest {
  uint64 user_id = 1;
}

message TesteeExistsRequest {
  uint64 user_id = 1;
}

message TesteeExistsResponse {
  bool exists = 1;
}

message TesteeResponse {
  uint64 user_id = 1;
  string name = 2;
  uint32 sex = 3;
  google.protobuf.Timestamp birthday = 4;
  int32 age = 5;                               // 计算出的年龄
}

// ============== 填写人 Messages ==============

message CreateWriterRequest {
  uint64 user_id = 1;
  string name = 2;
}

message UpdateWriterRequest {
  uint64 user_id = 1;
  string name = 2;
}

message GetWriterRequest {
  uint64 user_id = 1;
}

message WriterResponse {
  uint64 user_id = 1;
  string name = 2;
}
